<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="298dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_detail_background"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="56dp"
                android:background="@color/clear"
                android:drawableLeft="@drawable/ic_left_arrow"
                android:drawablePadding="0dp"
                android:padding="0dp"
                android:text="@string/back"
                android:textColor="@color/gray"
                android:textSize="12sp"
                app:iconPadding="-24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movie_details_age_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_details_age"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="226dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/movie_title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold"
                android:text="@string/movie_details_title"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/movie_details_age_text_view"/>

            <TextView
                android:id="@+id/movie_genre_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/pink"
                android:textSize="14sp"
                android:text="@string/movie_details_genre"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/movie_title_text_view"/>

            <ImageView
                android:id="@+id/start_one_image_view"
                android:layout_width="13dp"
                android:layout_height="12dp"
                android:src="@drawable/ic_star"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/movie_genre_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:tint="@color/pink"/>

            <ImageView
                android:id="@+id/start_two_image_view"
                android:layout_width="13dp"
                android:layout_height="12dp"
                android:src="@drawable/ic_star"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/movie_genre_text_view"
                app:layout_constraintStart_toEndOf="@id/start_one_image_view"
                app:tint="@color/pink"/>

            <ImageView
                android:id="@+id/start_three_image_view"
                android:layout_width="13dp"
                android:layout_height="12dp"
                android:src="@drawable/ic_star"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/movie_genre_text_view"
                app:layout_constraintStart_toEndOf="@id/start_two_image_view"
                app:tint="@color/pink"/>

            <ImageView
                android:id="@+id/start_four_image_view"
                android:layout_width="13dp"
                android:layout_height="12dp"
                android:src="@drawable/ic_star"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/movie_genre_text_view"
                app:layout_constraintStart_toEndOf="@id/start_three_image_view"
                app:tint="@color/pink"/>

            <ImageView
                android:id="@+id/start_five_image_view"
                android:layout_width="13dp"
                android:layout_height="12dp"
                android:src="@drawable/ic_star"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/movie_genre_text_view"
                app:layout_constraintStart_toEndOf="@id/start_four_image_view"
                app:tint="@color/gray"/>

            <TextView
                android:id="@+id/number_reviews_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/movie_details_number_reviews"
                android:textColor="@color/gray"
                android:textStyle="bold"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/movie_genre_text_view"
                app:layout_constraintStart_toEndOf="@id/start_five_image_view"/>

            <TextView
                android:id="@+id/storyline_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/movie_details_storyline_title"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/number_reviews_text_view"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/storyline_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/movie_details_storyline_value"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/storyline_title_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/cast_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/movie_details_cast_title"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/storyline_value_text_view"
                app:layout_constraintStart_toStartOf="parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginTop="8dp"
                android:baselineAligned="false"
                app:layout_constraintTop_toBottomOf="@id/cast_title_text_view">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_robert_downey"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="6dp"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:text="@string/movie_details_robert_downey"
                        android:textColor="@color/white"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_chris_evans"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="6dp"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:text="@string/movie_details_chris_evans"
                        android:textColor="@color/white"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_mark_ruffalo"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="6dp"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:text="@string/movie_details_mark_ruffalo"
                        android:textColor="@color/white"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_chris_hemsworth"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="6dp"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:text="@string/movie_details_chris_hemsworth"
                        android:textColor="@color/white"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>